--- a/index.html
+++ b/index.html
@@ -442,12 +442,12 @@ gtag('config', 'G-QL72FZ9YZ2');
 <!-- DSAR Card -->
 <div class="iphone-frame">
 <h1>Discover DSAR</h1>
-<h2>This Oct 27</h2>
+<h2>This Nov 2</h2>
 <p class="subtitle">with Vishal Merani</p>
 <h3>Stress, Sleep, Anxiety</h3>
 <p class="subtitle">Stop struggling! Decode and conquer</p>
 
-<a href="https://www.artofliving.online/registration.php?event_id=918142" class="button" target="_blank"> Enroll <> 8:00 PM to 10:30 PM </a> 
+<a href="https://www.artofliving.org/in-en/program/918142" class="button" target="_blank"> Enroll <> 8:00 PM to 10:30 PM </a> 
 <ul class="features">
 <li>To calm anxiety</li>
 <li>For better sleep</li>
@@ -455,13 +455,13 @@ gtag('config', 'G-QL72FZ9YZ2');
 </ul>
 
 <ul class="timeline">
-<li>Oct 27 - Oct 29</li>
+<li>Nov 2 - Nov 4</li>
 <li class="location-text"><strong>📍 Zoom | Online</strong></li>
 </ul>
 
 <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
-<div class="footer">💤 27–29 Oct 2025 | Late Evening ♡ Online Friendly Sessions <br>
+<div class="footer">💤 2–4 Nov 2025 | Late Evening ♡ Online Friendly Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
