--- a/index.html
+++ b/index.html
@@ -767,19 +767,13 @@ moonIcon.style.transform = darkMode ? "rotate(180deg)" : "rotate(0deg)";
 
 </script>
 
-  <!-- Diwali Subtle Fireworks Overlay -->
-<canvas id="diwali-fireworks"></canvas>
-<audio id="diwali-sound" src="https://cdn.pixabay.com/download/audio/2023/03/10/audio_f1e3df2728.mp3?filename=soft-firework.mp3" preload="auto"></audio>
+  <!-- Diwali Subtle Sparkle Field -->
+<canvas id="diwali-sparkles"></canvas>
 
 <script>
 (function() {
-  const canvas = document.getElementById('diwali-fireworks');
+  const canvas = document.getElementById('diwali-sparkles');
   const ctx = canvas.getContext('2d');
-  const particles = [];
-  const duration = 2500; // 2.5s
-  const startTime = Date.now();
-  const audio = document.getElementById('diwali-sound');
-
   canvas.style.position = 'fixed';
   canvas.style.top = 0;
   canvas.style.left = 0;
@@ -789,60 +783,56 @@ moonIcon.style.transform = darkMode ? "rotate(180deg)" : "rotate(0deg)";
   canvas.style.zIndex = 9999;
   canvas.width = innerWidth;
   canvas.height = innerHeight;
-  canvas.style.opacity = 0.8;
+
+  const sparkleCount = 120;
+  const sparkles = [];
 
   function random(min, max) { return Math.random() * (max - min) + min; }
 
-  for (let i = 0; i < 40; i++) {
-    particles.push({
-      x: random(innerWidth * 0.3, innerWidth * 0.7),
-      y: random(innerHeight * 0.3, innerHeight * 0.7),
-      radius: random(1, 3),
-      color: `hsl(${random(40, 60)}, 90%, ${random(55, 80)}%)`,
-      dx: random(-2, 2),
-      dy: random(-2, -6),
-      life: random(60, 100)
+  const colors = [
+    'rgba(255,255,255,0.8)',  // white
+    'rgba(200,200,200,0.8)',  // silver
+    'rgba(100,100,100,0.7)',  // grey/black sparkle
+    'rgba(255,220,180,0.7)',  // warm tint
+    'rgba(180,220,255,0.8)'   // cool tint
+  ];
+
+  for (let i = 0; i < sparkleCount; i++) {
+    sparkles.push({
+      x: random(0, innerWidth),
+      y: random(0, innerHeight),
+      r: random(0.4, 1.2),
+      color: colors[Math.floor(random(0, colors.length))],
+      opacity: random(0.3, 1),
+      twinkleSpeed: random(0.005, 0.02),
+      phase: random(0, Math.PI * 2)
     });
   }
 
   function draw() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    particles.forEach((p) => {
+    sparkles.forEach(s => {
+      s.opacity = 0.5 + Math.sin(s.phase) * 0.5;
+      s.phase += s.twinkleSpeed;
       ctx.beginPath();
-      ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-      ctx.fillStyle = p.color;
+      ctx.arc(s.x, s.y, s.r, 0, Math.PI * 2);
+      ctx.fillStyle = s.color.replace(/[\d.]+\)$/g, s.opacity + ')');
       ctx.fill();
-      p.x += p.dx;
-      p.y += p.dy;
-      p.dy += 0.05;
-      p.life--;
     });
-    if (Date.now() - startTime < duration) requestAnimationFrame(draw);
-    else fadeOut();
-  }
-
-  function fadeOut() {
-    let opacity = 0.8;
-    const fade = setInterval(() => {
-      opacity -= 0.05;
-      canvas.style.opacity = opacity;
-      if (opacity <= 0) {
-        clearInterval(fade);
-        canvas.remove();
-      }
-    }, 80);
-  }
-
-  // Play subtle sound once per first visit
-  if (!sessionStorage.getItem('diwaliSoundPlayed')) {
-    audio.volume = 0.2;
-    audio.play().catch(()=>{});
-    sessionStorage.setItem('diwaliSoundPlayed', 'true');
+    requestAnimationFrame(draw);
   }
 
   draw();
+
+  // Handle resize
+  window.addEventListener('resize', () => {
+    canvas.width = innerWidth;
+    canvas.height = innerHeight;
+  });
 })();
 </script>
+
+  
 
 </body>
 </html>
