--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <div class="iphone-frame">
 <h1> Silence Retreat </h1>
 <p class="subtitle">Guided by Neha, Darshak </p>
-<h3> 31stOct </h3>
+<h3> 31st Oct </h3>
 <h3>3 days of inner fireworks</h3>
 <p class="subtitle">With the blessings of Gurudev</p>
 <ul class="features">
@@ -427,7 +427,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 </ul>
 
 <ul class="timeline">
-<li><strong>📍 Art of Living International Center</strong><br>Bengaluru, Karnataka</li>
+<li>📍 Art of Living International Center<br>Bengaluru</li>
 </ul>
 
 <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
@@ -775,7 +775,7 @@ moonIcon.style.transform = darkMode ? "rotate(180deg)" : "rotate(0deg)";
   const canvas = document.getElementById('diwali-fireworks');
   const ctx = canvas.getContext('2d');
   const particles = [];
-  const duration = 2500; // 2.5s
+  const duration = 4500; // 4.5s
   const startTime = Date.now();
   const audio = document.getElementById('diwali-sound');
 
@@ -842,8 +842,6 @@ moonIcon.style.transform = darkMode ? "rotate(180deg)" : "rotate(0deg)";
   draw();
 })();
 </script>
-
   
-
 </body>
 </html>
