--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Yours</li> </ul>
 <h4>Pick your preference  </h4>
 <ul class="features">
- <li> Join waitlist for Nov </li>
-<a href="https://www.artofliving.org/in-en/program/913403" class="button" target="_blank"> 7 AM – 9 AM </a> </ul>
+ <li> 25 Oct - 27 Oct </li>
+<a href="https://www.artofliving.org/in-en/program/909425" class="button" target="_blank"> 7 AM – 8:45 AM </a> </ul>
  <ul class="features">
 <ul class="timeline">
 <li>Happening monthly-ish, tops</li>
