--- a/index.html
+++ b/index.html
@@ -390,10 +390,11 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Yours</li> </ul>
 <h4>Pick your preference  </h4>
 <ul class="features">
- <li> 25 Oct - 27 Oct </li>
+ <li> 29 Oct - 31 Oct </li>
 <a href="https://www.artofliving.org/in-en/program/909425" class="button" target="_blank"> 7 AM – 8:45 AM </a> </ul>
  <ul class="features">
 <ul class="timeline">
+<li> registration support -  7406198666 </li>
 <li>Happening monthly-ish, tops</li>
 <li>We'll touch base regularly, join whatsapp 💬 </li> 
 <li class="location-text"><strong>📍 Zoom | Online</strong></li>
