--- a/index.html
+++ b/index.html
@@ -363,12 +363,11 @@ gtag('config', 'G-QL72FZ9YZ2');
 <a href="https://www.artofliving.org/in-en/program/909425" class="button" target="_blank"> 7 AM – 8:45 AM </a> </ul>
  <ul class="features">
 <ul class="timeline">
-<li> registration support -  7406198666 </li>
 <li>Happening monthly-ish, tops</li>
 <li>We'll touch base regularly, join whatsapp 💬 </li> 
 <li class="location-text"><strong>📍 Zoom | Online</strong></li>
 </ul>
-<h4 class="queries-text">Queries & help @ 9818503888</h4>
+<h4 class="queries-text">Queries & help @  7406198666, 9818503888</h4>
 <div class="footer"> 😌 3 days, 2 hours a day | ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
