--- a/index.html
+++ b/index.html
@@ -344,6 +344,20 @@ gtag('config', 'G-QL72FZ9YZ2');
 <path d="M21 12.79A9 9 0 0112.21 3a7 7 0 100 14.58A9 9 0 0021 12.79z"/>
 </svg>
 </div>
+
+ <!-- U and Universe Image Only -->
+<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
+<img src="UandUniverse.png" alt="U and Universe" style="width: 100%; border-radius: 20px;" />
+<div class="overlay-text"> 𓆩𓆪 Screening now </div>
+</div>
+
+<!-- Secrets of the Subtle Card -->
+ <div class="iphone-frame">
+  <h1>Join us,</h1>
+  <h2>at Vishalakshi Mandap </h2> 
+  <h4>U and Universe </h4>
+    <p class = "subtitle">at VM for Ashramites</p>
+</div>
  
 <!-- Sahaj Meditation Card -->
 <div class="iphone-frame">
