--- a/index.html
+++ b/index.html
@@ -375,6 +375,11 @@ gtag('config', 'G-QL72FZ9YZ2');
 <a href="https://www.artofliving.org/in-en/program/909425" class="button" target="_blank"> 7 AM – 8:45 AM </a> 
   <li> 10 Nov - 12 Nov </li>
 <a href="https://www.artofliving.org/in-en/program/922799" class="button" target="_blank"> 4:30 PM – 6:00 PM </a> </ul> 
+   <li> 6 Nov - 8 Nov </li>
+<a href="https://www.artofliving.org/in-en/program/923069" class="button" target="_blank"> 7 PM – 9 PM </a> 
+  <li> 7 Nov - 9 Nov </li>
+<a href="https://www.artofliving.org/in-en/program/923075" class="button" target="_blank"> 6:30 PM – 8:30 PM </a> </ul> 
+  
  <ul class="features">
 <ul class="timeline">
 <li>Happening monthly-ish, tops</li>
@@ -425,12 +430,15 @@ gtag('config', 'G-QL72FZ9YZ2');
 <!-- DSAR Card -->
 <div class="iphone-frame">
 <h1>Discover DSAR</h1>
-<h2>This Nov 2</h2>
+<h2>This Nov </h2>
 <p class="subtitle">with Vishal Merani</p>
 <h3>Stress, Sleep, Anxiety</h3>
 <p class="subtitle">Stop struggling! Decode and conquer</p>
-
+<ul> <li> 2 Nov - 4 Nov </li>
 <a href="https://www.artofliving.org/in-en/program/918142" class="button" target="_blank"> Enroll <> 8:00 PM to 10:30 PM </a> 
+ <li> 17 Nov - 19 Nov </li>
+<a href="https://www.artofliving.org/in-en/program/923082" class="button" target="_blank"> 8:00 PM – 10:30 PM </a> </ul> 
+  
 <ul class="features">
 <li>To calm anxiety</li>
 <li>For better sleep</li>
