--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ gtag('config', 'G-QL72FZ9YZ2');
  <li> 29 Oct - 31 Oct </li>
 <a href="https://www.artofliving.org/in-en/program/909425" class="button" target="_blank"> 7 AM – 8:45 AM </a> 
   <li> 10 Nov - 12 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/922799" class="button" target="_blank"> 4:30 PM – 6:00 PM </a> </ul> 
+<a href="https://www.artofliving.org/in-en/program/922799" class="button" target="_blank"> 4:30 PM – 6:00 PM </a>  
    <li> 6 Nov - 8 Nov </li>
 <a href="https://www.artofliving.org/in-en/program/923069" class="button" target="_blank"> 7 PM – 9 PM </a> 
   <li> 7 Nov - 9 Nov </li>
@@ -427,7 +427,8 @@ gtag('config', 'G-QL72FZ9YZ2');
 <p class="subtitle">with Vishal Merani</p>
 <h3>Stress, Sleep, Anxiety</h3>
 <p class="subtitle">Stop struggling! Decode and conquer</p>
-<ul> <li> 2 Nov - 4 Nov </li>
+<ul class="features">
+<li> 2 Nov - 4 Nov </li>
 <a href="https://www.artofliving.org/in-en/program/918142" class="button" target="_blank"> Enroll <> 8:00 PM to 10:30 PM </a> 
  <li> 17 Nov - 19 Nov </li>
 <a href="https://www.artofliving.org/in-en/program/923082" class="button" target="_blank"> 8:00 PM – 10:30 PM </a> </ul> 
