--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@ gtag('config', 'G-QL72FZ9YZ2');
 <p class="subtitle">Stop struggling! Decode and conquer</p>
 <ul class="features">
 <li> 2 Nov - 4 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/918142" class="button" target="_blank"> Enroll <> 8:00 PM to 10:30 PM </a> 
+<a href="https://www.artofliving.org/in-en/program/918142" class="button" target="_blank"> 8:00 PM to 10:30 PM </a> 
  <li> 17 Nov - 19 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/923082" class="button" target="_blank"> 8:00 PM – 10:30 PM </a> </ul> 
+<a href="https://www.artofliving.org/in-en/program/923082" class="button" target="_blank"> 8:00 PM to 10:30 PM </a> </ul> 
   
 <ul class="features">
 <li>To calm anxiety</li>
