--- a/index.html
+++ b/index.html
@@ -385,10 +385,52 @@ gtag('config', 'G-QL72FZ9YZ2');
 </div>
 </div>
 
+  <!-- Happiness Program in City Card -->
+<div class="iphone-frame">
+<h1>Nov HP </h1>
+<h2>Happiness Program in City</h2>
+<p class="subtitle">with Vishal Merani </p>
+<h3>Hyper Detox with Sudarshan Kriya</h3>
+<p class="subtitle">In person | English, Hindi</p>
+
+<a href="https://www.artofliving.org/in-en/program/926625"  class="button" target="_blank">18 Dec - 20 Dec</a> 
+<ul class="timeline">
+<li> Timings <br> Weekday: 6:30a-9:30a <br>
+Weekend: 8a-12p </li>
+</ul>
+
+ <a href="https://www.artofliving.org/in-en/program/926629"  class="button" target="_blank">18 Dec - 20 Dec</a> 
+<ul class="timeline">
+<li> Timings <br> Weekday: 6:30p-9:30p <br>
+Weekend: 8a-12p </li>
+</ul> 
+<ul class="features"> <li> Queries - Swathi Singh, 9611718201 </li> </ul>
+<ul class="features">
+<li>Regular follow-ups</li>
+<li>Free repeats outside ashram</li>
+</ul>
+
+<ul class="timeline">
+<li>📍Bhartiya City, RK Hegde Nagar, Bangalore </li>
+</ul>
+
+<h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
+
+<div class="copy-box">
+<input class="copy-input" type="text" value="Happiness Program | | Help: 9818503888" id="copyText22" readonly>
+<button class="copy-btn" onclick="copyToClipboard('copyText22', this)">Copy</button>
+<a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
+</div>
+
+<div class="footer">🦦🤌🏻 Starts soon| this n♡vember <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+</div>
+
  <!-- Yes+ Program in Ashram Card -->
 <div class="iphone-frame">
 <h1>YES+</h1>
-<h2>at Ashram</h2>
+<h2>Join waitlist</h2>
 <p class="subtitle">Youth Special</p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle"> with Vishal Merani</p>
@@ -598,41 +640,6 @@ gtag('config', 'G-QL72FZ9YZ2');
     </div>
   </div>
 
-<!-- Happiness Program in City Card -->
-<div class="iphone-frame">
-<h1>Lucknow </h1>
-<h2>Happiness Program in City</h2>
-<p class="subtitle">with Vishal Merani </p>
-<h3>Hyper Detox with Sudarshan Kriya</h3>
-<p class="subtitle">In person | English, Hindi</p>
-
-<a href="https://www.artofliving.org/in-en/program/916567"  class="button" target="_blank">24 Oct - 26 Oct</a> 
-<ul class="timeline">
-<li> Timings <br> Weekday: 6-9p <br>
-Weekend: 9-12a </li>
-</ul>
-<ul class="features"> <li> Queries - 7275889831 </li> </ul>
-<ul class="features">
-<li>Regular follow-ups</li>
-<li>Free repeats outside ashram</li>
-</ul>
-
-<ul class="timeline">
-<li>📍Rajajipuram, Lucknow </li>
-</ul>
-
-<h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
-
-<div class="copy-box">
-<input class="copy-input" type="text" value="Happiness Program | | Help: 9818503888" id="copyText22" readonly>
-<button class="copy-btn" onclick="copyToClipboard('copyText22', this)">Copy</button>
-<a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
-</div>
-
-<div class="footer">🦦🤌🏻 Starts soon| this time  Luckn♡w <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-</div>
 
  <!-- Seva Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
