--- a/index.html
+++ b/index.html
@@ -387,18 +387,16 @@ gtag('config', 'G-QL72FZ9YZ2');
 
   <!-- Happiness Program in City Card -->
 <div class="iphone-frame">
-<h1>Nov HP </h1>
-<h2>Happiness Program in City</h2>
+<h1>Nov </h1>
+<h2>HP</h2>
 <p class="subtitle">with Vishal Merani </p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle">In person | English, Hindi</p>
-
 <a href="https://www.artofliving.org/in-en/program/926625"  class="button" target="_blank">18 Dec - 20 Dec</a> 
 <ul class="timeline">
 <li> Timings <br> Weekday: 6:30a-9:30a <br>
 Weekend: 8a-12p </li>
 </ul>
-
  <a href="https://www.artofliving.org/in-en/program/926629"  class="button" target="_blank">18 Dec - 20 Dec</a> 
 <ul class="timeline">
 <li> Timings <br> Weekday: 6:30p-9:30p <br>
@@ -470,8 +468,6 @@ Weekend: 8a-12p </li>
 <h3>Stress, Sleep, Anxiety</h3>
 <p class="subtitle">Stop struggling! Decode and conquer</p>
 <ul class="features">
-<li> 2 Nov - 4 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/918142" class="button" target="_blank"> 8:00 PM to 10:30 PM </a> 
  <li> 17 Nov - 19 Nov </li>
 <a href="https://www.artofliving.org/in-en/program/923082" class="button" target="_blank"> 8:00 PM to 10:30 PM </a> </ul> 
   
@@ -482,13 +478,13 @@ Weekend: 8a-12p </li>
 </ul>
 
 <ul class="timeline">
-<li>Nov 2 - Nov 4</li>
+<li>Nov 17 - Nov 19</li>
 <li class="location-text"><strong>📍 Zoom | Online</strong></li>
 </ul>
 
 <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
-<div class="footer">💤 2–4 Nov 2025 | Late Evening ♡ Online Friendly Sessions <br>
+<div class="footer">💤 17–19 Nov 2025 | Late Evening ♡ Online Friendly Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
