--- a/index.html
+++ b/index.html
@@ -394,12 +394,12 @@ gtag('config', 'G-QL72FZ9YZ2');
 <p class="subtitle">In person | English, Hindi</p>
 <a href="https://www.artofliving.org/in-en/program/926625"  class="button" target="_blank">18 Dec - 20 Dec</a> 
 <ul class="timeline">
-<li> Timings <br> Weekday: 6:30a-9:30a <br>
+<li> Weekday: 6:30a-9:30a <br>
 Weekend: 8a-12p </li>
 </ul>
  <a href="https://www.artofliving.org/in-en/program/926629"  class="button" target="_blank">18 Dec - 20 Dec</a> 
 <ul class="timeline">
-<li> Timings <br> Weekday: 6:30p-9:30p <br>
+<li> Weekday: 6:30p-9:30p <br>
 Weekend: 8a-12p </li>
 </ul> 
 <ul class="features"> <li> Queries - Swathi Singh, 9611718201 </li> </ul>
