--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ Weekend: 8a-12p </li>
 <li> Weekday: 6:30p-9:30p <br>
 Weekend: 8a-12p </li>
 </ul> 
-<ul class="features"> <li> Queries - Swathi Singh, 9611718201 </li> </ul>
+<ul class="features"> <li> Queries - 9611718201 </li> </ul>
 <ul class="features">
 <li>Regular follow-ups</li>
 <li>Free repeats outside ashram</li>
@@ -446,14 +446,6 @@ Weekend: 8a-12p </li>
 <li>Sattvic food</li>
 <li>Free repeats outside ashram</li>
 </ul>
-
-<ul class="timeline">
-<li>📍 Art of Living International Center<br>Bengaluru</li>
-</ul>
-
-<a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
-
-<h4 class="queries-text">Queries & help @ 9818503888</h4>
 
 <div class="footer">🦦🤌🏻 Starts Nov again| Bangalore ♡ Ashram <br>
 ॐ  Jai Guru Dev ॐ
