--- a/index.html
+++ b/index.html
@@ -369,9 +369,7 @@ gtag('config', 'G-QL72FZ9YZ2');
   <li> 10 Nov - 12 Nov </li>
 <a href="https://www.artofliving.org/in-en/program/922799" class="button" target="_blank"> 4:30 PM – 6:00 PM </a>  
    <li> 14 Nov - 16 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/912177" class="button" target="_blank"> 6:30 AM – 8:15 AM </a> 
-  <li> 7 Nov - 9 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/923075" class="button" target="_blank"> 6:30 PM – 8:30 PM </a> </ul> 
+<a href="https://www.artofliving.org/in-en/program/912177" class="button" target="_blank"> 6:30 AM – 8:15 AM </a> </ul> 
   
  <ul class="features">
 <ul class="timeline">
@@ -411,13 +409,6 @@ Weekend: 8a-12p </li>
 <ul class="timeline">
 <li>📍Bhartiya City, RK Hegde Nagar, Bangalore </li>
 </ul>
-
-<h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
-
-<div class="copy-box">
-<input class="copy-input" type="text" value="Happiness Program | | Help: 9818503888" id="copyText22" readonly>
-<button class="copy-btn" onclick="copyToClipboard('copyText22', this)">Copy</button>
-<a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
 </div>
 
 <div class="footer">🦦🤌🏻 Starts soon| this n♡vember <br>
