--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ gtag('config', 'G-QL72FZ9YZ2');
  
 <!-- Sahaj Meditation Card -->
 <div class="iphone-frame">
-<h1>Sahaj Meditation,</h1>
+<h1>Dec Sahaj,</h1>
 <p class="subtitle">with Vishal Merani/ Team</p>
 <h3>Lapse into meditation in minutes</h3>
 <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
@@ -364,12 +364,9 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Yours</li> </ul>
 <h4>Pick your preference  </h4>
 <ul class="features">
- <li> 11 Nov - 13 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/923075" class="button" target="_blank"> 6:30 AM – 8:30 AM </a> 
-  <li> 10 Nov - 12 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/922799" class="button" target="_blank"> 4:30 PM – 6:00 PM </a>  
-   <li> 14 Nov - 16 Nov </li>
-<a href="https://www.artofliving.org/in-en/program/912177" class="button" target="_blank"> 6:30 AM – 8:15 AM </a> </ul> 
+ <li> 12 Dec - 14 Dec </li>
+<a href="https://www.artofliving.org/in-en/program/928247" class="button" target="_blank"> 7:00 AM – 9:00 AM </a> 
+  </ul> 
   
  <ul class="features">
 <ul class="timeline">
@@ -472,15 +469,15 @@ Weekend: 8a-12p </li>
 
 <!-- Oneline Meditation & Breath Card -->
 <div class="iphone-frame">
-<h1> Now Nov,</h1>
+<h1> Do Dec,</h1>
 <h2> Meditation and Breath Workshop </h2>
 <p class="subtitle">with Vishal Merani</p>
 <h3> learn well-being online </h3>
 <p class="subtitle">Just you, your breath, and a better you.</p>
-<h4>Booked for this season </h4><h2> Join in Nov :) </h2>
+<h4>Dec 11 - 14 </h4><h2> Join in </h2>
 <ul class="timeline">
-<li>7 AM to 9 AM</li> </ul>
-<a href="https://aolt.in/895332" class="button" target="_blank">Book here ♡ </a> 
+<li>6:30 AM to 8:30 AM</li> </ul>
+<a href="https://www.artofliving.org/in-en/program/929292" class="button" target="_blank">Book here ♡ </a> 
 <ul class="timeline">
 <li>See you soon </li>
 <li><strong>📍 Online, Zoom </strong></li>
@@ -495,8 +492,8 @@ Weekend: 8a-12p </li>
   <!-- Online Advanced Meditation Retreat -->
 <div class="iphone-frame">
 <h1> Silence Retreat </h1>
-<p class="subtitle">Guided by Neha, Darshak </p>
-<h3> 14 Nov </h3>
+<p class="subtitle"> Join waitlist </p>
+<h3> Join waitlist for 2026 </h3>
 <h3>3 days of inner fireworks</h3>
 <p class="subtitle">With the blessings of Gurudev</p>
 <ul class="features">
