--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 </div>
 </div>
 
-  <!-- Happiness Program in City Card -->
+  <!-- Happiness Program in Bangalore City Card -->
 <div class="iphone-frame">
 <h1>Dec </h1>
 <h2>HP</h2>
@@ -410,6 +410,32 @@ Weekend: 8a-12p </li>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
+
+
+   <!-- Happiness Program in Other Indian City Card -->
+<div class="iphone-frame">
+<h1>Year end Special 2025</h1>
+<h2>HP</h2>
+<p class="subtitle">with Vishal Merani </p>
+<h3>Hyper Detox with Sudarshan Kriya</h3>
+<p class="subtitle">In person | English, Hindi</p>
+<a href="https://www.artofliving.org/in-en/program/932187"  class="button" target="_blank">22 Dec - 24 Dec</a> 
+<ul class="timeline">
+<li> Timings: 6:00p-9:00p </li>
+</ul>
+<ul class="features"> <li> Queries - 7875757507 </li> </ul>
+<ul class="features">
+<li>Regular follow-ups</li>
+<li>Free repeats outside ashram</li>
+</ul>
+
+<ul class="timeline">
+<li>📍Indian model international school 🛝, Bavdhan Khurd, <br> opp. Nyati Equinox Bavdhan <br> Pune MH</li>
+</ul>
+<div class="footer">🦦🤌🏻 Starts soon| December♡ <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+</div> 
   
  <!-- Yes+ Program in Ashram Card -->
 <div class="iphone-frame">
