--- a/index.html
+++ b/index.html
@@ -345,12 +345,6 @@ gtag('config', 'G-QL72FZ9YZ2');
 </svg>
 </div>
 
- <!-- U and Universe Image Only -->
-<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
-<img src="UandUniverse.png" alt="U and Universe" style="width: 100%; border-radius: 20px;" />
-<div class="overlay-text"> 𓆩𓆪 Screening now </div>
-</div>
-
  
 <!-- Sahaj Meditation Card -->
 <div class="iphone-frame">
@@ -619,6 +613,11 @@ Weekend: 8a-12p </li>
     <p class = "subtitle">at Kashyapa hall for Ashramites</p>
 </div>
 
+   <!-- U and Universe Image Only -->
+<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
+<img src="UandUniverse.png" alt="U and Universe" style="width: 100%; border-radius: 20px;" />
+<div class="overlay-text"> 𓆩𓆪 Screened in VM, 2025 </div>
+</div>
   <!-- Waitlist Card -->
   <div class="iphone-frame">
     <h1>Join waitlist</h1>
