--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ Weekend: 8a-12p </li>
 
    <!-- Happiness Program in Other Indian City Card -->
 <div class="iphone-frame">
-<h1>Year end Special 2025</h1>
+<h1>Year End Special 2025</h1>
 <h2>HP</h2>
 <p class="subtitle">with Vishal Merani </p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
@@ -424,7 +424,7 @@ Weekend: 8a-12p </li>
 </ul>
 
 <ul class="timeline">
-<li>📍Indian model international school 🛝, Bavdhan Khurd, <br> opp. Nyati Equinox Bavdhan <br> Pune MH</li>
+<li>📍Indian model international school 🛝 <br> opp. Nyati Equinox Bavdhan <br> Pune MH</li>
 </ul>
 <div class="footer">🦦🤌🏻 Starts soon| December♡ <br>
 ॐ  Jai Guru Dev ॐ
