--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ Weekend: 8a-12p </li>
 
    <!-- Happiness Program in Other Indian City Card -->
 <div class="iphone-frame">
-<h1>Year End Special 2025</h1>
+<h1>Pune 2025</h1>
 <h2>HP</h2>
 <p class="subtitle">with Vishal Merani </p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
