--- a/index.html
+++ b/index.html
@@ -382,12 +382,12 @@ gtag('config', 'G-QL72FZ9YZ2');
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle">In person | English, Hindi</p>
 <a href="https://www.artofliving.org/in-en/program/926625"  class="button" target="_blank">11 Dec - 13 Dec</a> 
-<ul class="timeline">
+<ul class="features">
 <li> Weekday: 6:30a-9:30a <br>
 Weekend: 8a-12p </li>
 </ul>
  <a href="https://www.artofliving.org/in-en/program/926629"  class="button" target="_blank">11 Dec - 13 Dec</a> 
-<ul class="timeline">
+<ul class="features">
 <li> Weekday: 6:30p-9:30p <br>
 Weekend: 8a-12p </li>
 </ul> 
