--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@ Weekend: 8a-12p </li>
 <p class="subtitle">with Vishal Merani</p>
 <h3> learn well-being online </h3>
 <p class="subtitle">Just you, your breath, and a better you.</p>
+<h4>Dec 6 - 9 </h4><h2> Registrations closed, join next </h2>
 <h4>Dec 11 - 14 </h4><h2> Join in </h2>
 <ul class="timeline">
 <li>6:30 AM to 8:30 AM</li> </ul>
