--- a/index.html
+++ b/index.html
@@ -461,9 +461,9 @@ Weekend: 8a-12p </li>
 <!-- DSAR Card -->
 <div class="iphone-frame">
 <h1>Discover DSAR</h1>
-<h2>This Nov </h2>
+<h2>This Dec </h2>
 <p class="subtitle">with Vishal Merani</p>
-<h3>Stress, Sleep, Anxiety</h3>
+<h3>Deep Sleep, Anxiety Relief</h3>
 <p class="subtitle">Stop struggling! Decode and conquer</p>
 <ul class="features">
  <li> 15 Dec - 17 Dec </li>
