--- a/index.html
+++ b/index.html
@@ -397,8 +397,7 @@ ul.timeline, ul.features {
         </div>
     </footer>
 </div>
-
-
+    
 <div class="iphone-frame" id="card-dec-hp">
     <header>
         <div class="card-title-group">
@@ -444,6 +443,48 @@ ul.timeline, ul.features {
     </footer>
 </div>
 
+
+    
+<div class="iphone-frame" id="card-dec-hp">
+    <header>
+        <div class="card-title-group">
+            <h1>NY2026 HP</h1>
+            <h2>Hyper Detox with Sudarshan Kriya</h2>
+            <p class="subtitle">with Vishal Merani</p>
+        </div>
+    </header>
+    <div class="reindeer-icon"></div>
+
+    <section class="course-details">
+        <h3>In person | English, Hindi</h3>
+    </section>
+
+    <section class="schedule-booking">
+
+        <a href="https://programs.vvmvp.org/events/1254/" class="button" target="_blank">2 Jan - 4 Jan</a>
+        <ul class="features">
+            <li> Checkin From 1st Jan 2026, 2:00 pm</li>
+            <li> Program Starts 2nd Jan 2026 @ 9:30 am</li>
+            <li> Program Ends 4th Jan 2026 @ 5:00 pm</li>
+            <li> Checkout By 5th Jan 2026, 9:30 am </li>
+        </ul>
+    </section>
+
+    <section class="logistics-contact">
+        <ul class="features">
+            <li>Regular follow-ups</li>
+            <li>Free repeats outside ashram</li>
+        </ul>
+        <span class="location-text">📍Art of living international center, Bangalore </span>
+        <h4 class="queries-text">Queries - 9574490365</h4>
+    </section>
+
+    <footer>
+        <div class="footer">🦦🤌🏻 Starts soon | December ♡ January  <br>
+        ॐ Jai Guru Dev ॐ
+        </div>
+    </footer>
+</div>
 
 <div class="iphone-frame" id="card-pune-hp">
     <header>
