--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ ul.timeline, ul.features {
     <section class="schedule-booking">
 
         <a href="https://programs.vvmvp.org/events/1254/" class="button" target="_blank">2 Jan - 4 Jan</a>
-        <ul class="features">
+        <ul class="location-text">
             <li> Checkin From 1st Jan 2026, 2:00 pm</li>
             <li> Program Starts 2nd Jan 2026 @ 9:30 am</li>
             <li> Program Ends 4th Jan 2026 @ 5:00 pm</li>
