--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@ ul.timeline, ul.features {
     <section class="schedule-booking">
         <h4>Pick your preference </h4>
         <ul class="features">
-            <li> 12 Dec - 14 Dec </li>
+            <li> 19 Dec - 21 Dec </li>
         </ul>
-        <a href="https://www.artofliving.org/in-en/program/928247" class="button" target="_blank"> 7:00 AM – 9:00 AM </a>
+        <a href="https://www.artofliving.online/registration.php?event_id=908789" class="button" target="_blank"> 7:00 AM – 9:00 AM </a>
     </section>
 
     <section class="logistics-contact">
