--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ ul.timeline, ul.features {
 <div class="iphone-frame" id="card-dsar">
     <header>
         <div class="card-title-group">
-            <h1>Discover DSAR</h1>
+            <h1>Discover DSAR this weekend</h1>
             <h2>Deep Sleep, Anxiety Relief</h2>
             <p class="subtitle">with Vishal Merani</p>
         </div>
