--- a/index.html
+++ b/index.html
@@ -380,6 +380,12 @@ ul.timeline, ul.features {
             <li> 19 Dec - 21 Dec </li>
         </ul>
         <a href="https://www.artofliving.online/registration.php?event_id=908789" class="button" target="_blank"> 7:00 AM – 9:00 AM </a>
+
+                <ul class="features">
+            <li> 23 Dec - 25 Dec </li>
+        </ul>
+        <a href="https://www.artofliving.org/in-en/program/936141" class="button" target="_blank"> 8:00 AM – 10:00 AM </a>
+
     </section>
 
     <section class="logistics-contact">
@@ -614,14 +620,19 @@ ul.timeline, ul.features {
     </section>
 
     <section class="schedule-booking">
-        <h4>Dec 6 - 9:</h4>
-        <h2 class="small-h2">Registrations closed, join next</h2>
-        <h4>Dec 11 - 14:</h4>
+        <h4>Dec 25 - 28 </h4>
+        <h2 class="small-h2"> Register </h2>
+    <ul class="timeline">
+            <li>6:30 PM to 8:30 PM</li>
+        </ul>
+        <a https://www.artofliving.org/in-en/program/937721" class="button" target="_blank">Book here ♡ </a>
+        
+        <h4> Jan 04 - 07 </h4>
         <h2 class="small-h2">Join in</h2>
         <ul class="timeline">
-            <li>6:30 AM to 8:30 AM</li>
+            <li> 8:00 PM to 10:00 PM</li>
         </ul>
-        <a href="https://www.artofliving.org/in-en/program/929292" class="button" target="_blank">Book here ♡ </a>
+        <a  https://www.artofliving.org/in-en/program/936306" class="button" target="_blank">Book here ♡ </a>
     </section>
 
     <section class="logistics-contact">
