--- a/index.html
+++ b/index.html
@@ -625,14 +625,14 @@ ul.timeline, ul.features {
     <ul class="timeline">
             <li>6:30 PM to 8:30 PM</li>
         </ul>
-        <a https://www.artofliving.org/in-en/program/937721" class="button" target="_blank">Book here ♡ </a>
+        <a href=https://www.artofliving.org/in-en/program/937721" class="button" target="_blank"> Book here ♡ </a>
         
         <h4> Jan 04 - 07 </h4>
         <h2 class="small-h2">Join in</h2>
         <ul class="timeline">
             <li> 8:00 PM to 10:00 PM</li>
         </ul>
-        <a  https://www.artofliving.org/in-en/program/936306" class="button" target="_blank">Book here ♡ </a>
+        <a href=https://www.artofliving.org/in-en/program/936306" class="button" target="_blank"> Book here ♡ </a>
     </section>
 
     <section class="logistics-contact">
