--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <div class="iphone-frame" id="card-sahaj">
     <header>
         <div class="card-title-group">
-            <h1>Dec Sahaj,</h1>
+            <h1>2026 Sahaj,</h1>
             <p class="subtitle">with Vishal Merani/ Team</p>
         </div>
     </header>
@@ -229,14 +229,14 @@
         <h4>Pick your preference </h4>
         
         <ul class="features">
-            <li> 07 Jan - 09 Jan </li>
+            <li> 17 Jan - 19 Jan </li>
         </ul>
-        <a href="https://www.artofliving.online/registration.php?event_id=908789" class="button" target="_blank"> 7:00 AM – 9:00 AM </a>
+        <a href="https://www.artofliving.online/registration.php?event_id=944718" class="button" target="_blank"> 6:00 PM – 7:30 PM </a>
 
         <ul class="features">
-            <li> 21 Jan - 23 Jan </li>
+            <li> 20 Jan - 22 Jan </li>
         </ul>
-        <a href="https://www.artofliving.org/in-en/program/936141" class="button" target="_blank"> 8:00 AM – 10:00 AM </a>
+        <a href="https://www.artofliving.org/in-en/program/944719" class="button" target="_blank"> 7:00 AM – 8:30 AM </a>
     </section>
 
     <section class="logistics-contact">
@@ -426,9 +426,9 @@
     <section class="schedule-booking">
         <h4>Schedule:</h4>
         <ul class="features">
-            <li> 5 Jan - 7 Jan </li>
+            <li> 29 Jan - 31 Jan </li>
         </ul>
-        <a href="https://www.artofliving.org/in-en/program/938552" class="button" target="_blank"> 7:30 PM to 10:00 PM </a>
+        <a href="https://www.artofliving.org/in-en/program/944244" class="button" target="_blank"> 8:00 PM to 10:30 PM </a>
     </section>
 
     <section class="logistics-contact">
@@ -456,12 +456,12 @@
     </section>
 
     <section class="schedule-booking">
-        <h4>Dec 25 - 28 </h4>
+        <h4>Feb 26 - Mar 1 </h4>
         <h2 class="small-h2"> Register </h2>
         <ul class="timeline">
-            <li>6:30 PM to 8:30 PM</li>
+            <li>6:00 AM to 8:00 AM</li>
         </ul>
-        <a href="https://www.artofliving.org/in-en/program/937721" class="button" target="_blank"> Book here ♡ </a>
+        <a href="https://www.artofliving.org/in-en/program/944076" class="button" target="_blank"> Book here ♡ </a>
         
         <h4> Jan 04 - 07 </h4>
         <h2 class="small-h2">Join in</h2>
