--- a/index.html
+++ b/index.html
@@ -253,6 +253,36 @@
     </footer>
 </div>
 
+    <div class="iphone-frame" id="card-do-dec">
+    <header>
+        <div class="card-title-group">
+            <h1>Join Jan,</h1>
+            <h2>Meditation and Breath Workshop</h2>
+            <p class="subtitle">with Vishal Merani</p>
+        </div>
+    </header>
+
+    <section class="course-details">
+        <h3>learn well-being online </h3>
+        <p class="subtitle">Just you, your breath, and a better you.</p>
+    </section>
+
+    <section class="schedule-booking">
+        <h4>Feb 26 - Mar 1 </h4>
+        <h2 class="small-h2"> Register </h2>
+        <ul class="timeline">
+            <li>6:00 AM to 8:00 AM</li>
+        </ul>
+        <a href="https://www.artofliving.org/in-en/program/944076" class="button" target="_blank"> Book here ♡ </a>
+        
+        <h4> Jan 04 - 07 </h4>
+        <h2 class="small-h2">Join in</h2>
+        <ul class="timeline">
+            <li> 8:00 PM to 10:00 PM</li>
+        </ul>
+        <a href="https://www.artofliving.org/in-en/program/936306" class="button" target="_blank"> Book here ♡ </a>
+    </section>
+
 <div class="iphone-frame" id="card-dec-hp">
     <header>
         <div class="card-title-group">
@@ -441,35 +471,6 @@
     </footer>
 </div>
 
-<div class="iphone-frame" id="card-do-dec">
-    <header>
-        <div class="card-title-group">
-            <h1>Do Dec,</h1>
-            <h2>Meditation and Breath Workshop</h2>
-            <p class="subtitle">with Vishal Merani</p>
-        </div>
-    </header>
-
-    <section class="course-details">
-        <h3>learn well-being online </h3>
-        <p class="subtitle">Just you, your breath, and a better you.</p>
-    </section>
-
-    <section class="schedule-booking">
-        <h4>Feb 26 - Mar 1 </h4>
-        <h2 class="small-h2"> Register </h2>
-        <ul class="timeline">
-            <li>6:00 AM to 8:00 AM</li>
-        </ul>
-        <a href="https://www.artofliving.org/in-en/program/944076" class="button" target="_blank"> Book here ♡ </a>
-        
-        <h4> Jan 04 - 07 </h4>
-        <h2 class="small-h2">Join in</h2>
-        <ul class="timeline">
-            <li> 8:00 PM to 10:00 PM</li>
-        </ul>
-        <a href="https://www.artofliving.org/in-en/program/936306" class="button" target="_blank"> Book here ♡ </a>
-    </section>
 
     <section class="logistics-contact">
         <ul class="timeline">
