--- a/index.html
+++ b/index.html
@@ -220,6 +220,25 @@
     <div class="live-badge">● LIVE</div>
     <header>
         <div class="card-title-group">
+            <h1><span class="neon-year">2026</span> Schedule 2026,</h1>
+        </div>
+    </header>
+
+    <section class="schedule-booking">
+        
+        <ul class="features"><li> Gurudev Schedule </li></ul>
+        <a href="https://gurudev.artofliving.org/tour-schedule/" class="button" target="_blank"> Gurudev Schedule </a>
+    </section>
+
+
+    <footer>
+        <div class="footer"> ❤️💕 <br> ॐ Jai Guru Dev ॐ </div>
+    </footer>
+</div>    
+<div class="iphone-frame live-card" id="card-sahaj">
+    <div class="live-badge">● LIVE</div>
+    <header>
+        <div class="card-title-group">
             <h1><span class="neon-year">2026</span> Sahaj,</h1>
             <p class="subtitle">with Vishal Merani/ Team</p>
         </div>
