--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
     <div class="live-badge">● LIVE</div>
     <header>
         <div class="card-title-group">
-            <h1><span class="neon-year">2026</span> Schedule 2026,</h1>
+            <h1><span class="neon-year"></span> 2026,</h1>
         </div>
     </header>
 
     <section class="schedule-booking">
         
-        <ul class="features"><li> Gurudev Schedule </li></ul>
+        <ul class="features"><li> Much awaited </li></ul>
         <a href="https://gurudev.artofliving.org/tour-schedule/" class="button" target="_blank"> Gurudev Schedule </a>
     </section>
 
