--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 
 <div class="iphone-frame" id="card-programs">
     <header><div class="card-title-group"><h1>Programs</h1><h2>Next up, Lined up 🎺</h2></div></header>
-    <section><a href="https://www.artofliving.org/node/1302793" class="button" target="_blank">Check here ♡ </a></section>
+    <section><a href="https://www.artofliving.org/in-en/t/vishal-merani" class="button" target="_blank">Check here ♡ </a></section>
     <footer><div class="footer"> ॐ Jai Guru Dev ॐ </div></footer>
 </div>
 
